# heatpumps

./: .gitignore  README.md  pyproject.toml
src/heatpumps/: hp_dashboard.py  parameters.py  variables.py
src/heatpumps/economics/: econ_params.py  economic_utils.py  exerpy_costing.py
src/heatpumps/models/: HeatPumpBase.py  HeatPumpCascade.py  HeatPumpCascade2IHX.py  HeatPumpCascade2IHXTrans.py  HeatPumpCascadeBase.py  HeatPumpCascadeEcon.py  HeatPumpCascadeEconIHX.py  HeatPumpCascadeEconIHXTrans.py  HeatPumpCascadeEconTrans.py  HeatPumpCascadeFlash.py  HeatPumpCascadeFlashTrans.py  HeatPumpCascadeIC.py  HeatPumpCascadeICTrans.py  HeatPumpCascadeIHXEcon.py  HeatPumpCascadeIHXEconTrans.py  HeatPumpCascadeIHXPC.py  HeatPumpCascadeIHXPCIHX.py  HeatPumpCascadeIHXPCIHXTrans.py  HeatPumpCascadeIHXPCTrans.py  HeatPumpCascadePC.py  HeatPumpCascadePCIHX.py  HeatPumpCascadePCIHXTrans.py  HeatPumpCascadePCTrans.py  HeatPumpCascadeTrans.py  HeatPumpEcon.py  HeatPumpEconIHX.py  HeatPumpEconIHXTrans.py  HeatPumpEconTrans.py  HeatPumpFlash.py  HeatPumpFlashTrans.py  HeatPumpIC.py  HeatPumpICTrans.py  HeatPumpIHX.py  HeatPumpIHXEcon.py  HeatPumpIHXEconTrans.py  HeatPumpIHXPC.py  HeatPumpIHXPCIHX.py  HeatPumpIHXPCIHXTrans.py  HeatPumpIHXPCTrans.py  HeatPumpIHXTrans.py  (+8 more)
src/heatpumps/models/input/: params_hp_cascade.json  params_hp_cascade_2ihx_trans.json  params_hp_cascade_econ_closed_ihx_trans.json  params_hp_cascade_econ_closed_trans.json  params_hp_cascade_econ_open_ihx_trans.json  params_hp_cascade_econ_open_trans.json  params_hp_cascade_flash_trans.json  params_hp_cascade_ic.json  params_hp_cascade_ic_trans.json  params_hp_cascade_ihx_econ_closed_trans.json  params_hp_cascade_ihx_econ_open_trans.json  params_hp_cascade_ihx_pc_econ_closed_ihx_trans.json  params_hp_cascade_ihx_pc_econ_closed_trans.json  params_hp_cascade_ihx_pc_econ_open_ihx_trans.json  params_hp_cascade_ihx_pc_econ_open_trans.json  params_hp_cascade_pc_econ_closed_ihx_trans.json  params_hp_cascade_pc_econ_closed_trans.json  params_hp_cascade_pc_econ_open.json  params_hp_cascade_pc_econ_open_ihx_trans.json  params_hp_cascade_pc_econ_open_trans.json  params_hp_cascade_trans.json  params_hp_econ_closed.json  params_hp_econ_closed_ihx_trans.json  params_hp_econ_closed_trans.json  params_hp_econ_open.json  params_hp_econ_open_ihx_trans.json  params_hp_econ_open_trans.json  params_hp_flash.json  params_hp_flash_trans.json  params_hp_ic.json  params_hp_ic_trans.json  (+13 more)
tests/: test_models.py
(+86 files in other folders)
