[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "heatpumps"
description = "Fork of the heatpumps package with an extended Streamlit dashboard and ExerPy-based exergy and exergoeconomic analysis."
version = "1.3.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "!=3.9.7, >=3.9"
authors = [
    { name = "Jonas Freißmann", email = "jonas.freissmann@web.de" },
    { name = "Malte Fritz", email = "malte.fritz@web.de" }
]
maintainers = [
    { name = "Hongchao Ge" }
]

classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # CoolProp: thermophysical fluid properties
    "coolprop>=6.4.1",
    # darkdetect: detect system light/dark mode
    "darkdetect>=0.8.0",
    # ExerPy: exergy and exergoeconomic analysis
    "exerpy>=0.0.7",
    # FluProDia: fluid property diagrams
    "fluprodia==3.3",
    # Matplotlib: plotting and figure generation
    "matplotlib>=3.6.3",
    # NumPy: numerical array operations
    "numpy>=1.24.0",
    # pandas: tabular data handling
    "pandas>=1.5.3",
    # Plotly: interactive plots
    "plotly>=5.20.0",
    # scikit-learn: regression helpers
    "scikit-learn>=1.2.1",
    # SciPy: interpolation and scientific utilities
    "scipy>=1.10.0",
    # Streamlit: dashboard user interface
    "streamlit==1.44.1",
    # TESPy: thermodynamic process simulation
    "tespy>=0.9.2"
]

[project.optional-dependencies]
dev = [
    # build: build source/wheel distributions
    "build",
    # flit: packaging/publishing helper for the Flit-based project
    "flit",
    # furo: Sphinx documentation theme
    "furo",
    # pytest: test runner
    "pytest",
    # sphinx>=7.2.2: documentation generator
    "sphinx>=7.2.2",
    # sphinx-copybutton: adds copy buttons in docs code blocks
    "sphinx-copybutton",
    # sphinx-design: layout/components for Sphinx docs
    "sphinx-design",
    # sphinxcontrib.bibtex: bibliography support in docs
    "sphinxcontrib.bibtex",
]

[project.scripts]
heatpumps-dashboard = "heatpumps.run_dashboard:main"

[project.urls]
Homepage = "https://github.com/hongchaogeexergy/heatpumps"
Repository = "https://github.com/hongchaogeexergy/heatpumps"

[tool.flit.sdist]
include = [
    'static/*',
    'static/img/*',
    'static/img/topologies/*',
    'models/input/*'
]
exclude = [
    "docs/_build"
]
